--- a/listing.html
+++ b/listing.html
@@ -227,7 +227,7 @@
                                 <a href="" class="view_more">Read More</a>
                             </p>
                             <div class="enq_sec">
-                                <a href="" class="btn btn-primary consult_btn">
+                                <a href="details.html" class="btn btn-primary consult_btn">
                                     <i class="bi-chat-right-dots me-2"></i> Request a Consultation
                                 </a>
                             </div>
@@ -315,7 +315,7 @@
                                 <a href="" class="view_more">Read More</a>
                             </p>
                             <div class="enq_sec">
-                                <a href="" class="btn btn-primary consult_btn">
+                                <a href="details.html" class="btn btn-primary consult_btn">
                                     <i class="bi-chat-right-dots me-2"></i> Request a Consultation
                                 </a>
                             </div>
@@ -403,7 +403,7 @@
                                 <a href="" class="view_more">Read More</a>
                             </p>
                             <div class="enq_sec">
-                                <a href="" class="btn btn-primary consult_btn">
+                                <a href="details.html" class="btn btn-primary consult_btn">
                                     <i class="bi-chat-right-dots me-2"></i> Request a Consultation
                                 </a>
                             </div>
@@ -491,7 +491,7 @@
                                 <a href="" class="view_more">Read More</a>
                             </p>
                             <div class="enq_sec">
-                                <a href="" class="btn btn-primary consult_btn">
+                                <a href="details.html" class="btn btn-primary consult_btn">
                                     <i class="bi-chat-right-dots me-2"></i> Request a Consultation
                                 </a>
                             </div>
