--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
           <div class="row">
             <div class="col-md-9">
-              <form>
+              <form action="listing.html" method="get">
                 <!-- Input Card -->
                 <div class="input-card input-card-sm">
                   <div class="input-card-form">
@@ -136,7 +136,7 @@
                     <!-- End Input Group -->
                   </div>
 
-                  <button type="button" class="btn btn-primary btn-lg" id="heroNameAddOn">Search</button>
+                  <button type="submit" class="btn btn-primary btn-lg" id="heroNameAddOn">Search</button>
                 </div>
                 <!-- End Input Card -->
               </form>
